# JustBuild

./: .gitignore  README.md  README.run.md  TEST_RESULTS.md  pyproject.toml
.venv-system/: pyvenv.cfg
build_output_local/calculator-using-tkinter-python-that-adds-subtracts-multiplies/run/: build_events.jsonl  build_summary.partial.json
src/justbuild/: __init__.py  cli.py  concurrency.py  execution.py  llm.py  memory.py  models.py  observability.py  orchestrator.py  prompts.py  prototype.py  publishing.py  reporting.py  validation.py  workflow.py
src/justbuild/agents/: __init__.py  architecture.py  base.py  debugging.py  evaluation.py  implementation.py  specification.py  testing.py
tests/: __init__.py  support.py  test_agents.py  test_cli.py  test_execution.py  test_llm.py  test_publishing.py  test_validation.py  test_workflow.py
