[project]
name = "justbuild-multi-agent"
version = "0.1.0"
description = "Production-style multi-agent prototype builder"
readme = "README.md"
requires-python = ">=3.11"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
